--- a/app/src/main/res/drawable/layout_background.xml
+++ b/app/src/main/res/drawable/layout_background.xml
@@ -1,8 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
     <gradient
-        android:startColor="@color/white"
-        android:endColor="@color/gray_level_6"
-        android:angle="90"
-        />
+        android:angle="270"
+        android:endColor="@color/gray_level_7"
+        android:startColor="@color/white" />
 </shape>
