--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layout_background"
-    tools:context="com.vyy.imagepixelate.MainActivity">
+    tools:context="com.vyy.imageprocessingpractice.MainActivity">
 
     <FrameLayout
         android:id="@+id/frame"
