--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_medium">10dp</dimen>
-    <dimen name="margin_large">16dp</dimen>
+    <dimen name="margin_large">18dp</dimen>
     <dimen name="margin_xxx_large">50dp</dimen>
-    <dimen name="button_width">50dp</dimen>
-    <dimen name="button_height">40dp</dimen>
+    <dimen name="button_width">40dp</dimen>
+    <dimen name="button_height">35dp</dimen>
     <dimen name="padding_small">5dp</dimen>
     <dimen name="padding_medium">10dp</dimen>
     <dimen name="button_radius">30dip</dimen>
 
+    <dimen name="textSize_small">12sp</dimen>
     <dimen name="textSize_medium">14sp</dimen>
     <dimen name="textInputLayout_width">80dp</dimen>
 
