--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,21 +32,6 @@
             android:contentDescription="@string/image" />
     </FrameLayout>
 
-    <ImageButton
-        android:id="@+id/imageButton_undo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/image_button_selected_background"
-        android:contentDescription="@string/undo"
-        android:padding="@dimen/padding_medium"
-        android:src="@drawable/ic_undo_24"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/galleryButton_frame"
-        app:layout_constraintStart_toStartOf="@id/frame"
-        app:layout_constraintTop_toTopOf="@id/galleryButton_frame"
-        tools:visibility="visible" />
-
-
     <ProgressBar
         android:id="@+id/progresBar"
         style="?android:attr/progressBarStyle"
@@ -63,43 +48,40 @@
         android:id="@+id/textView_grayScale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginStart="@dimen/margin_xx_large"
+        android:layout_marginBottom="@dimen/margin_xxx_large"
+        android:alpha="0.6"
         android:text="@string/gray"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@id/view_separatorLine_horizontal"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal"
+        app:layout_constraintBottom_toBottomOf="@id/frame"
+        app:layout_constraintStart_toStartOf="@id/frame"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView_rgb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_xx_large"
+        android:layout_marginBottom="@dimen/margin_xxx_large"
+        android:alpha="0.6"
         android:text="@string/rgb"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@id/view_separatorLine_horizontal"
-        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal"
+        app:layout_constraintBottom_toBottomOf="@id/frame"
+        app:layout_constraintEnd_toEndOf="@id/frame"
         tools:visibility="visible" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier_grayScale"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="bottom"
-        app:constraint_referenced_ids="textView_grayScale, textView_rgb" />
 
     <View
         android:id="@+id/view_separatorLine_horizontal"
         android:layout_width="0dp"
         android:layout_height="5dp"
-        android:layout_marginTop="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_medium"
         android:background="@drawable/shadow_background"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@id/frame"
         app:layout_constraintStart_toStartOf="@id/frame"
-        app:layout_constraintTop_toBottomOf="@id/imageButton_reflect_x_axis" />
+        app:layout_constraintTop_toBottomOf="@id/button_rgbToHsi" />
 
     <View
         android:id="@+id/view_separatorLine_vertical"
@@ -127,16 +109,30 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
+    <ImageButton
+        android:id="@+id/imageButton_undo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/image_button_selected_background"
+        android:contentDescription="@string/undo"
+        android:padding="@dimen/padding_medium"
+        android:src="@drawable/ic_undo_24"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/galleryButton_frame"
+        app:layout_constraintStart_toStartOf="@id/frame"
+        app:layout_constraintTop_toTopOf="@id/galleryButton_frame"
+        tools:visibility="visible" />
+
     <FrameLayout
         android:id="@+id/galleryButton_frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_x_large"
         android:background="@drawable/button_gallery_background"
         android:contentDescription="@string/take_a_photo_from_camera"
         android:padding="@dimen/padding_medium"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/guideline4">
+        app:layout_constraintEnd_toStartOf="@id/guideline4"
+        app:layout_constraintTop_toBottomOf="@id/button_process">
 
         <Button
             android:id="@+id/galleryButton"
@@ -150,12 +146,12 @@
         android:id="@+id/cameraButton_frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_x_large"
         android:background="@drawable/button_camera_background"
         android:contentDescription="@string/pick_image_from_gallery"
         android:padding="@dimen/padding_medium"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guideline4">
+        app:layout_constraintStart_toEndOf="@id/guideline4"
+        app:layout_constraintTop_toBottomOf="@id/button_process">
 
         <Button
             android:id="@+id/cameraButton"
@@ -226,13 +222,40 @@
         app:layout_constraintStart_toEndOf="@id/imageButton_crop"
         app:layout_constraintTop_toBottomOf="@id/guideline3" />
 
+    <Button
+        android:id="@+id/button_rgbToHsi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:text="@string/rgb_to_hsi"
+        android:textColor="@color/colorPrimaryVariant"
+        android:textSize="@dimen/textSize_small"
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toStartOf="@id/button_rgbToHsv"
+        app:layout_constraintStart_toStartOf="@id/frame"
+        app:layout_constraintTop_toBottomOf="@id/imageButton_reflect_y_axis" />
+
+    <Button
+        android:id="@+id/button_rgbToHsv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:text="@string/rgb_to_hsv"
+        android:textColor="@color/colorPrimaryVariant"
+        android:textSize="@dimen/textSize_small"
+
+        app:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="@id/frame"
+        app:layout_constraintStart_toEndOf="@id/button_rgbToHsi"
+        app:layout_constraintTop_toBottomOf="@id/imageButton_pixelate" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout_width"
         style="@style/textInputLayoutStyle"
         android:hint="@string/width"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/barrier_grayScale"
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal"
         tools:visibility="visible">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -247,7 +270,7 @@
         android:hint="@string/height"
         android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/barrier_grayScale"
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal"
         tools:visibility="visible">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -262,7 +285,7 @@
         android:hint="@string/fromx"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/textInputLayout_fromY"
-        app:layout_constraintTop_toBottomOf="@id/barrier_grayScale">
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_fromX"
@@ -276,7 +299,7 @@
         android:hint="@string/fromy"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/barrier_grayScale">
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_fromY"
@@ -290,7 +313,7 @@
         android:hint="@string/tox"
         android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/guideline4"
-        app:layout_constraintTop_toBottomOf="@id/barrier_grayScale">
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_toX"
@@ -304,7 +327,7 @@
         android:hint="@string/toy"
         android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/textInputLayout_toX"
-        app:layout_constraintTop_toBottomOf="@id/barrier_grayScale">
+        app:layout_constraintTop_toBottomOf="@id/view_separatorLine_horizontal">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditText_toY"
